Copy to clipboard added.

--- a/src/popup.html
+++ b/src/popup.html
@@ -13,7 +13,10 @@
 			<button class="btn" id="get-major-points">Get Major Points</button>
 		</div>
 		<div id="loader"></div>
-		<p id="result"></p>
+		<div class="result">
+			<p id="text"></p>
+			<button id="copy-btn"><img src="/assets/icons/copy.png" id="copy"></img></button>
+		</div>
 	</body>
 	<script src="popup.js" type="module"></script>
 </html>
